# CMake-add_custom_command-example

./: CMakeLists.txt  LICENSE  README.md
arg-output/: CMakeLists.txt  main.c
arg-target/: CMakeLists.txt  sum.c  sum_test.c
